Rubocop lint fixes
